INDEX: ugly html skeleton

--- a/index.html
+++ b/index.html
@@ -4,6 +4,42 @@
         <title>Castlevania Club</title>
     </head>
     <body>
-        Welcome outsider!
+        <header>
+            <h1>Castlevania SOTN</h1>
+        </header>
+        <section class="banner">
+            <img src="castlevania.jpg" alt="">
+            <div class="welcome">
+                <h2>Ah, Alucard... what is your business here?</h2>
+            </div>
+        </section>
+        <nav class="main-nav">
+            <ul>
+                <li><a href="" class="join">Join the club</a></li>
+                <li><a href="">Characters</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </nav>
+        <main>
+            <article>
+                <h2>What is a man? A miserable little pile of secrets!</h2>
+                <p>Lorem ipsum dolor sit amet...</p>
+            </article>
+        </main>
+        <ul class="images">
+            <li><img src="" alt=""></li>
+            <li><img src="" alt=""></li>
+        </ul>
+        <section class="join">
+            <h2>Join us today!</h2>
+            <p>Lorem ipsum...</p>
+            <form action="">
+                <input type="email" name="email" placeholder="Type your e-mail">
+                <button>Submit your soul</button>
+            </form>
+        </section>
+        <footer>
+            <p class="copyright">2020, Castlevania Club</p>
+        </footer>
     </body>
 </html>
