INDEX: header && banner Fixed header and fixed text of banner

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Castlevania Club</title>
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <header>
@@ -10,7 +11,7 @@
         <section class="banner">
             <img src="castlevania.jpg" alt="">
             <div class="welcome">
-                <h2>Ah, Alucard... what is your business here?</h2>
+                <h2>Ah, Alucard...<span><br>what is your business here?</span></h2>
             </div>
         </section>
         <nav class="main-nav">
