INDEX: article & nav.join (CSS)

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             </article>
         </main>
         <ul class="images">
-            <li><img src="" alt=""></li>
-            <li><img src="" alt=""></li>
+            <li><img src="castlevania_01.png" alt=""/></li>
+            <li><img src="castlevania_01.png" alt=""/></li>
         </ul>
         <section class="join">
             <h2>Join us today!</h2>
