--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
             <h2>Join us today!</h2>
             <p>Lorem ipsum...</p>
             <form action="">
-                <input type="email" name="email" placeholder="Type your e-mail">
+                <input type="email" name="email" placeholder="Type your e-mail" required>
+                <br>
                 <button>Submit your soul</button>
             </form>
         </section>
