INDEX: article Change p::selection style, added fake data at article

--- a/index.html
+++ b/index.html
@@ -24,12 +24,17 @@
         <main>
             <article>
                 <h2>What is a man? A miserable little pile of secrets!</h2>
-                <p>Lorem ipsum dolor sit amet...</p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer auctor accumsan consequat. Sed volutpat fringilla nunc, in tempus enim imperdiet eu. Donec nec lectus efficitur, euismod lacus ut, feugiat odio. Cras pellentesque consequat semper. Nullam dignissim tincidunt velit, et commodo sapien dapibus vel. Quisque sit amet ex commodo, scelerisque quam sed, fermentum nibh. Cras imperdiet sagittis massa in volutpat. Curabitur mi neque, euismod sit amet est a, tincidunt vehicula leo. Fusce luctus lacinia lobortis. Nulla bibendum egestas purus in scelerisque. Morbi a sodales sem. Curabitur vel pretium ligula.
+                </p>
+                <p>
+                    Morbi luctus ut tellus sit amet volutpat. Curabitur eleifend leo mollis tellus interdum euismod. Integer lacinia ultrices nibh sed porttitor. Nulla facilisi. Donec et mauris neque. Nunc nec ipsum viverra, viverra mauris et, posuere lorem. Quisque at metus imperdiet, varius ante sit amet, laoreet nunc. Sed aliquet mi at erat gravida, vel efficitur lacus malesuada. Etiam sed vulputate metus, nec pulvinar dui. In vehicula ipsum in nisl tempus varius. Curabitur imperdiet aliquet faucibus. Nulla facilisi. Nullam sodales vestibulum dui id varius. Etiam euismod laoreet leo, et facilisis orci vehicula vel.
+                </p>
             </article>
         </main>
         <ul class="images">
             <li><img src="castlevania_01.png" alt=""/></li>
-            <li><img src="castlevania_01.png" alt=""/></li>
+            <li><img src="castlevania_02.jpg" alt=""/></li>
         </ul>
         <section class="join">
             <h2>Join us today!</h2>
