README && INDEX Readme: 1. Upload img Index: 1. Responsive stuff 2. Last adjusts

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Castlevania Club</title>
         <link rel="stylesheet" href="index.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <header>
@@ -14,7 +15,7 @@
                 <h2>Ah, Alucard...<span><br>what is your business here?</span></h2>
             </div>
         </section>
-        <nav class="main-nav">
+        <nav>
             <ul>
                 <li><a href="" class="join">Join the club</a></li>
                 <li><a href="">Characters</a></li>
